--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <name>SourceBuddy</name>
-    <groupId>com.javax0.jamal</groupId>
+    <groupId>com.sourcebuddy</groupId>
     <artifactId>SourceBuddy</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <description>This project provides a simple wrapper around the Java compiler API, which is part of the JDK.</description>
@@ -95,8 +95,8 @@
                 <version>3.9.0</version>
                 <configuration>
                     <source>17</source>
-                    <target>11</target>
-                    <release>11</release>
+                    <target>17</target>
+                    <release>17</release>
                 </configuration>
             </plugin>
             <plugin>
