--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <name>SourceBuddy</name>
     <groupId>com.javax0.sourcebuddy</groupId>
     <artifactId>SourceBuddy</artifactId>
-    <version>2.4.0</version>
+    <version>2.4.3</version>
     <description>This project provides a simple wrapper around the Java compiler API, which is part of the JDK.</description>
     <licenses>
         <license>
@@ -63,7 +63,7 @@
                     <docletArtifact>
                         <groupId>com.javax0.jamal</groupId>
                         <artifactId>jamal-doclet</artifactId>
-                        <version>1.12.4</version>
+                        <version>2.5.0-SNAPSHOT</version>
                     </docletArtifact>
                     <additionalOptions>
                         <additionalOption>--source-root</additionalOption>
@@ -75,7 +75,7 @@
                             <tagletArtifact>
                                 <groupId>com.javax0.jamal</groupId>
                                 <artifactId>jamal-doclet</artifactId>
-                                <version>1.12.4</version>
+                                <version>2.5.0-SNAPSHOT</version>
                             </tagletArtifact>
                         </taglet>
                     </taglets>
@@ -105,6 +105,18 @@
                 <version>3.0.0-M5</version>
             </plugin>
             <plugin>
+                <groupId>com.javax0.jamal</groupId>
+                <artifactId>jamal-maven-plugin</artifactId>
+                <version>2.5.0-SNAPSHOT</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>jamal</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
                 <version>1.6.13</version>
@@ -127,7 +139,7 @@
         <dependency>
             <groupId>com.javax0.jamal</groupId>
             <artifactId>jamal-all</artifactId>
-            <version>1.12.4</version>
+            <version>2.5.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
